# micro-egg

./: .gitignore  Makefile  README.md  pyproject.toml
src/: common.py  egraph.py  union_find.py
tests/: test_egraph.py  test_union_find.py
