[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro_egg"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.mypy]
check_untyped_defs = true

[tool.ruff.lint]
extend-select = ["B"]

